--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     margin:0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 html{
     font-size: 10px;
@@ -99,6 +100,35 @@ a{
 }
 /* End of hero section  */
 
+/* Services Section  */
+#service{
+
+}
+#service .service{
+    flex-direction: column;
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 100px 0;
+}
+#service .section-title{
+    font-size: 4rem;
+    font-weight: 300;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+}
+#service .section-title span{
+    color: crimson;
+}
+#service .service-top p{
+font-size: 1.4rem;
+margin-top: 5px;
+line-height: 2.5rem;
+font-weight: 300;
+letter-spacing: 0.04rem;
+}
+ /* End of Service Section  */
 
 /* key frames  */
 @keyframes text-reveal-box{
