--- a/style.css
+++ b/style.css
@@ -1,217 +1,286 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
-*{
-    padding: 0;
-    margin:0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
-html{
-    font-size: 10px;
-    font-family: 'Montserrat', sans-serif;
+html {
+  font-size: 10px;
+  font-family: "Montserrat", sans-serif;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-p{
-    color: wheat;
-    text-align: left;
-    font-size: 1.2rem;
-    line-height: 1.9rem;
-}
-.container{
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-/* hero section  */
-#hero{
-    background-image: url(./img/IMG_0654.JPG);
-    background-size: cover;
-    background-position: top center;
-    position: relative;
-    z-index: 1;
-}
-#hero:after{
-    content:"";
-    position: absolute;
-    left:0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    opacity: .7;
-    z-index: -1;
-}
-#hero h1{
-    display: block;
-    width: fit-content;
-    font-size: 4rem;
-    position: relative;
-    color:transparent;
-    animation: text-reveal .3s ease forwards ;
-    animation-delay: 1s;
-}
-#hero h1:nth-child(1){
-    animation-delay: 1s;
-}
-#hero h1:nth-child(2){
-    animation-delay: 2s;
-}
-#hero h1:nth-child(3){
-    animation:text-reveal-name .3s ease forwards;
-    animation-delay: 3s;
+p {
+  color: wheat;
+  text-align: left;
+  font-size: 1.2rem;
+  line-height: 1.9rem;
 }
 
-#hero h1 span{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 0;
-    background-color: crimson;
-    animation: text-reveal-box 1s ease .5s;   
+.container {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-#hero h1:nth-child(1) span{
-    animation-delay: .5s;
+.section-title {
+  font-size: 4rem;
+  font-weight: 300;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
 }
-#hero h1:nth-child(2) span{
-    animation-delay: 1.5s;
+.section-title span {
+  color: crimson;
 }
-#hero h1:nth-child(3) span{
-    animation-delay: 2.5s;
+/* hero section  */
+#hero {
+  background-image: url(./img/IMG_0654.JPG);
+  background-size: cover;
+  background-position: top center;
+  position: relative;
+  z-index: 1;
 }
-#hero .cta{
-    display: inline-block;
-    padding: 10px 30px;
-    color: crimson;
-    background-color: transparent;
-    border: 2px solid crimson;
-    font-weight: bold;
-    font-size: 2rem;
-    text-transform: uppercase;
-    letter-spacing: .1rem;
-    margin-top: 36px;
-    transition: .3s ease color;
+#hero:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.7;
+  z-index: -1;
 }
-#hero .cta:hover{
-    color: wheat;
+#hero h1 {
+  display: block;
+  width: fit-content;
+  font-size: 4rem;
+  position: relative;
+  color: transparent;
+  animation: text-reveal 0.3s ease forwards;
+  animation-delay: 1s;
 }
-#hero .hero{
-    margin: 0;
-    padding: 0 50px;
-    justify-content: flex-start;
+#hero h1:nth-child(1) {
+  animation-delay: 1s;
+}
+#hero h1:nth-child(2) {
+  animation-delay: 2s;
+}
+#hero h1:nth-child(3) {
+  animation: text-reveal-name 0.3s ease forwards;
+  animation-delay: 3s;
+}
+
+#hero h1 span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  background-color: crimson;
+  animation: text-reveal-box 1s ease 0.5s;
+}
+#hero h1:nth-child(1) span {
+  animation-delay: 0.5s;
+}
+#hero h1:nth-child(2) span {
+  animation-delay: 1.5s;
+}
+#hero h1:nth-child(3) span {
+  animation-delay: 2.5s;
+}
+#hero .cta {
+  display: inline-block;
+  padding: 10px 30px;
+  color: crimson;
+  background-color: transparent;
+  border: 2px solid crimson;
+  font-weight: bold;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  margin-top: 36px;
+  transition: 0.3s ease color;
+}
+#hero .cta:hover {
+  color: wheat;
+}
+#hero .hero {
+  margin: 0;
+  padding: 0 50px;
+  justify-content: flex-start;
 }
 /* End of hero section  */
 
 /* Services Section  */
-#service{
-
+#service {
 }
-#service .service{
-    flex-direction: column;
-    text-align: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 100px 0;
+#service .service {
+  flex-direction: column;
+  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 100px 0;
 }
-#service .service-top{
-    margin: 10px 20px;
-}
-#service .section-title{
-    font-size: 4rem;
-    font-weight: 300;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    letter-spacing: .2rem;
-}
-#service .section-title span{
-    color: crimson;
-}
-#service .service-top p{
-font-size: 1.4rem;
-margin-top: 5px;
-line-height: 2.5rem;
-font-weight: 300;
-letter-spacing: 0.04rem;
-color: black;
-text-align: center;
-}
-#service .service-bottom{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-top: 50px;
-}
-#service .service-item{
-    flex-basis: 80%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    border-radius: 10px;
-    padding: 30px;
-    background-image: url(./img/279547.jpg);
-    background-size: cover;
-    margin: 10px 5%;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-}
-#service .service-item::after{
-    content: "";
-    position: absolute;
-    left:0;
-    top:0;
-    height:100%;
-    width: 100%;
-    background-color: black;
-    opacity: .4;
-    z-index: -1;
-}
-.service-item .icon{
-    width:80px;
-    height: 80px;
-    margin-bottom: 20px;
-}
-#service .service-item h2{
-    text-transform: uppercase;
-    margin-bottom: 10px;
-    color: white;
-    font-size: 1.5rem;
+#service .service-top {
+  margin: 10px 20px;
 }
 
- /* End of Service Section  */
+#service .service-top p {
+  font-size: 1.4rem;
+  margin-top: 5px;
+  line-height: 2.5rem;
+  font-weight: 300;
+  letter-spacing: 0.04rem;
+  color: black;
+  text-align: center;
+}
+#service .service-bottom {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 50px;
+}
+#service .service-item {
+  flex-basis: 80%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 10px;
+  padding: 30px;
+  background-image: url(./img/279547.jpg);
+  background-size: cover;
+  margin: 10px 5%;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+#service .service-item::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.4;
+  z-index: -1;
+}
+.service-item .icon {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 20px;
+}
+#service .service-item h2 {
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  color: white;
+  font-size: 1.5rem;
+}
+/* End of Service Section  */
+
+/* Project Section  */
+
+#project .project {
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+#project .project .project-header h1 {
+  margin-bottom: 50px;
+}
+#project .all-project {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+#project .project-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin: 20px auto;
+  overflow: hidden;
+  border-radius: 10px;
+}
+#project .project-info {
+  padding: 30px;
+  flex-basis: 50%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgb(44, 90, 90);
+  color: white;
+}
+#project .project-info h1 {
+  font-size: 4rem;
+  font-weight: 500;
+}
+#project .project-info h2 {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-top: 10px;
+}
+#project .project-image {
+  flex-basis: 50%;
+  height: 250px;
+  position: relative;
+  overflow: hidden;
+}
+#project .project-image::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.5;
+}
+#project .project-item:hover .project-image img {
+  transform: scale(1.1);
+  transition: ease 0.3s;
+}
+/* End of Project Section  */
 
 /* key frames  */
-@keyframes text-reveal-box{
-    50%{
-        width:100%;
-        left:0;
-    }
-    100%{
-        width:0;
-        left:100%;
-    }
+@keyframes text-reveal-box {
+  50% {
+    width: 100%;
+    left: 0;
+  }
+  100% {
+    width: 0;
+    left: 100%;
+  }
 }
 
-@keyframes text-reveal{
-    100%{
-        color:white;
-    }
+@keyframes text-reveal {
+  100% {
+    color: white;
+  }
 }
-@keyframes text-reveal-name{
-    100%{
-        color: crimson;
-        font-weight: bold;
-    }
+@keyframes text-reveal-name {
+  100% {
+    color: crimson;
+    font-weight: bold;
+  }
 }
 
 /* end of key frames  */
