--- a/style.css
+++ b/style.css
@@ -41,6 +41,22 @@ p {
 .section-title span {
   color: crimson;
 }
+.cta {
+    display: inline-block;
+    padding: 10px 30px;
+    color: crimson;
+    background-color: transparent;
+    border: 2px solid crimson;
+    font-weight: bold;
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    margin-top: 36px;
+    transition: 0.3s ease color;
+  }
+.cta:hover {
+    color: wheat;
+  }
 /* hero section  */
 #hero {
   background-image: url(./img/IMG_0654.JPG);
@@ -98,22 +114,6 @@ p {
 #hero h1:nth-child(3) span {
   animation-delay: 2.5s;
 }
-#hero .cta {
-  display: inline-block;
-  padding: 10px 30px;
-  color: crimson;
-  background-color: transparent;
-  border: 2px solid crimson;
-  font-weight: bold;
-  font-size: 2rem;
-  text-transform: uppercase;
-  letter-spacing: 0.1rem;
-  margin-top: 36px;
-  transition: 0.3s ease color;
-}
-#hero .cta:hover {
-  color: wheat;
-}
 #hero .hero {
   margin: 0;
   padding: 0 50px;
@@ -122,8 +122,6 @@ p {
 /* End of hero section  */
 
 /* Services Section  */
-#service {
-}
 #service .service {
   flex-direction: column;
   text-align: center;
@@ -258,6 +256,65 @@ p {
   transition: ease 0.3s;
 }
 /* End of Project Section  */
+
+/* <!-- About Section  --> */
+
+#about .about{
+    flex-direction: column-reverse;
+    text-align: center;
+    max-width: 1200px;
+    margin:0 auto;
+    padding: 100px 20px;
+}
+#about .col-left{
+    width:250px;
+    height:360px;
+}
+
+#about .col-left .about-img{
+    position: relative;
+    border: 10px solid silver;
+    height:100%;
+    width: 100%;
+
+}
+#about .col-left .about-img::after{
+    content:"";
+    position: absolute;
+    left:-33px;
+    top:19px;
+    height: 98%;
+    width:98%;
+    border:7px solid crimson;
+    z-index: -1;
+}
+#about .col-right{
+    width:100%;
+}
+#about .col-right h2{
+    font-weight: 500;
+    font-size: 1.8rem;
+    letter-spacing: .2rem;
+    margin-bottom: 10px; 
+}
+#about .col-right p{
+    margin-bottom: 20px;
+    color: black;
+    text-align:center;
+}
+#about .col-right .cta{
+    margin-bottom: 50px;
+    padding: 10px 20px;
+    font-size: 2rem;
+    color: black;
+}
+#about .col-right .cta:hover{
+    background-color:crimson;
+    color: white;
+    transition: .3s ease-in;
+}
+/* <!-- End of About Section  --> */
+
 
 /* key frames  */
 @keyframes text-reveal-box {
