--- a/style.css
+++ b/style.css
@@ -42,21 +42,21 @@ p {
   color: crimson;
 }
 .cta {
-    display: inline-block;
-    padding: 10px 30px;
-    color: crimson;
-    background-color: transparent;
-    border: 2px solid crimson;
-    font-weight: bold;
-    font-size: 2rem;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    margin-top: 36px;
-    transition: 0.3s ease color;
-  }
+  display: inline-block;
+  padding: 10px 30px;
+  color: crimson;
+  background-color: transparent;
+  border: 2px solid crimson;
+  font-weight: bold;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  margin-top: 36px;
+  transition: 0.3s ease color;
+}
 .cta:hover {
-    color: wheat;
-  }
+  color: wheat;
+}
 /* hero section  */
 #hero {
   background-image: url(./img/IMG_0654.JPG);
@@ -259,62 +259,105 @@ p {
 
 /* <!-- About Section  --> */
 
-#about .about{
-    flex-direction: column-reverse;
-    text-align: center;
-    max-width: 1200px;
-    margin:0 auto;
-    padding: 100px 20px;
+#about .about {
+  flex-direction: column-reverse;
+  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 100px 20px;
 }
-#about .col-left{
-    width:250px;
-    height:360px;
+#about .col-left {
+  width: 250px;
+  height: 360px;
 }
 
-#about .col-left .about-img{
-    position: relative;
-    border: 10px solid silver;
-    height:100%;
-    width: 100%;
-
+#about .col-left .about-img {
+  position: relative;
+  border: 10px solid silver;
+  height: 100%;
+  width: 100%;
 }
-#about .col-left .about-img::after{
-    content:"";
-    position: absolute;
-    left:-33px;
-    top:19px;
-    height: 98%;
-    width:98%;
-    border:7px solid crimson;
-    z-index: -1;
+#about .col-left .about-img::after {
+  content: "";
+  position: absolute;
+  left: -33px;
+  top: 19px;
+  height: 98%;
+  width: 98%;
+  border: 7px solid crimson;
+  z-index: -1;
 }
-#about .col-right{
-    width:100%;
+#about .col-right {
+  width: 100%;
 }
-#about .col-right h2{
-    font-weight: 500;
-    font-size: 1.8rem;
-    letter-spacing: .2rem;
-    margin-bottom: 10px; 
+#about .col-right h2 {
+  font-weight: 500;
+  font-size: 1.8rem;
+  letter-spacing: 0.2rem;
+  margin-bottom: 10px;
 }
-#about .col-right p{
-    margin-bottom: 20px;
-    color: black;
-    text-align:center;
+#about .col-right p {
+  margin-bottom: 20px;
+  color: black;
+  text-align: center;
 }
-#about .col-right .cta{
-    margin-bottom: 50px;
-    padding: 10px 20px;
-    font-size: 2rem;
-    color: black;
+#about .col-right .cta {
+  margin-bottom: 50px;
+  padding: 10px 20px;
+  font-size: 2rem;
+  color: black;
 }
-#about .col-right .cta:hover{
-    background-color:crimson;
-    color: white;
-    transition: .3s ease-in;
+#about .col-right .cta:hover {
+  background-color: crimson;
+  color: white;
+  transition: 0.3s ease-in;
 }
 /* <!-- End of About Section  --> */
 
+/* Contact Section  */
+#contact .contact {
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+#contact .contact-items {
+  width: 80%;
+}
+#contact .contact-item {
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  padding: 30px;
+  margin: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 3px 6px silver;
+  flex-direction: column;
+  transition: 0.3s ease-in-out box-shadow;
+}
+#contact .contact-item:hover {
+  box-shadow: 0 0 8px;
+}
+#contact .contact-item .icon {
+  width: 70px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+#contact .contact-info h1 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+#contact .contact-info h2 {
+  font-size: 1.8rem;
+  line-height: 2rem;
+  font-weight: 500;
+}
+
+/* End of Contact Section */
 
 /* key frames  */
 @keyframes text-reveal-box {
