--- a/style.css
+++ b/style.css
@@ -65,6 +65,80 @@ p {
 .cta:hover {
   color: wheat;
 }
+/* header  */
+#header{
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: auto;
+}
+#header .header{
+    min-height: 10vh;
+    background-color: rgba(31, 30, 30, 0.25);
+}
+#header .nav-bar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    max-width: 1200px;
+    padding:0 10px;
+}
+#header .nav-list ul{
+    list-style: none;
+    position: absolute;
+    background-color: rgba(31, 30, 30);
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top:0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    overflow: hidden;
+    flex-direction: column;
+}
+#header .nav-list ul a{
+    font-size: 2.5rem;
+    font-weight: 500;
+    letter-spacing: .2rem;
+    text-decoration: none;
+    color: whitesmoke;
+    text-transform: uppercase;
+    padding: 20px;
+    display: block;
+}
+#header .nav-list ul a::after{
+    content:attr(data-after);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0);
+    color:rgba(220, 20, 60, 0.15);
+    font-size: 9rem;
+    letter-spacing: 25px;
+    z-index: -1;
+    transition: .4s ease-in-out;
+}
+#header .nav-list ul li:hover a::after{
+    transform: translate(-50%,-50%) scale(1);
+    letter-spacing: initial;
+}
+#header .hamburger{
+    z-index: 10;
+    height: 60px;
+    width: 60px;
+    display: inline-block;
+    border:3px solid;
+    
+
+}
+
+/* End of Header  */
 /* hero section  */
 #hero {
   background-image: url(./img/IMG_0654.JPG);
